--- a/OsmoNITB/osmonitb-usermanual.adoc
+++ b/OsmoNITB/osmonitb-usermanual.adoc
@@ -31,7 +31,7 @@ include::chapters/mncc.adoc[]
 
 include::../common/chapters/control_if.adoc[]
 
-include::chapters/abis.adoc[]
+include::../common/chapters/abis.adoc[]
 
 include::../common/chapters/port_numbers.adoc[]
 
