--- a/OsmoBTS/abis/rtp-amr.adoc
+++ b/OsmoBTS/abis/rtp-amr.adoc
@@ -843,7 +843,54 @@ msc {
 	ms => phy	[label="L1 burst (sub-block 3 of speech frame N + sub-block 1 of speech frame N+1)"];
 	ms => phy	[label="L1 burst (sub-block 4 of speech frame N + sub-block 2 of speech frame N+1)"];
 	phy => bts	[label="PH-DATA.ind GsmL1_TchPlType_Amr (N)"];
-	bts => mgw	[label="RTP (AMR FT=0..7,Q=1)"];
+	bts => mgw	[label="RTP (AMR FT=0..7,Q=1) MARKER=1"];
+}
+----
+
+==== TCH/AHS Uplink: FACCH/H During DTX operation
+
+The following procedure must be observed if a FACCH/H frame must be transmitted during DTX operation.
+
+["mscgen"]
+----
+msc {
+	hscale = 2;
+	ms [label="MS"], phy [label="BTS-PHY"], bts [label="BTS"], mgw [label="MGW"];
+
+	...;
+	ms .. mgw	[label="FACCH/H during DTX operation"];
+
+	ms -x phy	[label="Supressed L1 burst"];
+	ms -x phy	[label="Supressed L1 burst"];
+	phy -x bts	[label="No PH-DATA.ind sent[BFI]"];
+	bts -x mgw	[label="Suppressed RTP frame"];
+
+	ms => phy	[label="L1 burst (block 1 of SID_ONSET + sub-block 1 of FACCH/H)"];
+	ms => phy	[label="L1 burst (block 2 of SID_ONSET + sub-block 2 of FACCH/H)"];
+	phy -x bts	[label="No PH-DATA.ind sent[BFI]"];
+	bts -x mgw	[label="Suppressed RTP frame"];
+
+	ms => phy	[label="L1 burst (sub-block 3+4 of FACCH/H)"];
+	ms => phy	[label="L1 burst (sub-block 5+6 of FACCH/H)"];
+	phy -x bts	[label="No PH-DATA.ind sent[BFI]"];
+	bts -x mgw	[label="Suppressed RTP frame"];
+
+	ms => phy	[label="L1 burst (sub-block 7 of FACCH/H + sub-block 1 of SID_FIRST_P1)"];
+	ms => phy	[label="L1 burst (sub-block 8 of FACCH/H + sub-block 2 of SID_FIRST_P1)"];
+	phy => bts	[label="PH-DATA.ind GsmL1_TchPlType_Amr_Onset"];
+	bts => bts	[label="lchan_set_marker() and store CMI"];
+	phy => bts	[label="PH-DATA.ind FACCH/H"];
+	bts => mgw	[label="FACCH/H"];
+
+	ms => phy	[label="L1 burst (sub-block 3 of SID_FIRST_P1 + block 1 of SID_FIRST_P2)"];
+	ms => phy	[label="L1 burst (sub-block 4 of SID_FIRST_P1 + block 2 of SID_FIRST_P2)"];
+	phy -x bts	[label="No PH-DATA.ind sent[BFI]"];
+	bts -x mgw	[label="Suppressed RTP frame"];
+
+	ms -x phy	[label="Supressed L1 burst"];
+	ms -x phy	[label="Supressed L1 burst"];
+	phy => bts	[label="PH-DATA.ind GsmL1_TchPlType_Amr_SidFirstP1"];
+	bts => mgw	[label="RTP (AMR FT=SID,Q=1)"];
 }
 ----
 
