Add chapter on Cell Broadcast Support in Osmocom (to BSC+NITB manual)
Change-Id: I2c621def499dc0564d31eb9440e22e79948a5466

--- a/OsmoNITB/osmonitb-usermanual.adoc
+++ b/OsmoNITB/osmonitb-usermanual.adoc
@@ -31,6 +31,8 @@ include::chapters/mncc.adoc[]
 
 include::../common/chapters/control_if.adoc[]
 
+include::../common/chapters/cell-broadcast.adoc[]
+
 include::../common/chapters/abis.adoc[]
 
 include::../common/chapters/port_numbers.adoc[]
