--- a/OsmoNITB/osmonitb-usermanual.adoc
+++ b/OsmoNITB/osmonitb-usermanual.adoc
@@ -29,7 +29,7 @@ include::chapters/hlr.adoc[]
 
 include::chapters/smpp.adoc[]
 
-include::chapters/mncc.adoc[]
+include::../common/chapters/mncc.adoc[]
 
 include::../common/chapters/control_if.adoc[]
 
