move smpp.adoc to common chapters, generalize
OsmoMSC will need the same SMPP chapter as OsmoNITB.

In smpp.adoc, replace program name with parameter, add parameter to
OsmoNITB's main adoc and move smpp.adoc to common/chapters.

Change-Id: I15febdea6569316dad3eed5f9dc7158adb5b078c

--- a/OsmoNITB/osmonitb-usermanual.adoc
+++ b/OsmoNITB/osmonitb-usermanual.adoc
@@ -28,7 +28,7 @@ include::chapters/bts-examples.adoc[]
 
 include::chapters/hlr.adoc[]
 
-include::chapters/smpp.adoc[]
+include::../common/chapters/smpp.adoc[]
 
 include::../common/chapters/mncc.adoc[]
 
