install doc: add asciidoc-dblatex dep
On debian 9, apparently asciidoc-dblatex needs to be installed manually in
order to be able to generate PDFs. Add asciidoc-dblatex dep to INSTALL.txt.

Change-Id: I24b606016e7f1c03bd73a3b0cf4fa3e5b89eb192

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -3,12 +3,15 @@ Dependencies needed, by example of a debian system:
 apt-get install \
   make \
   asciidoc \
+  asciidoc-dblatex \
   xsltproc \
   dblatex \
   mscgen \
   graphviz \
   python-pychart \
   python-nwdiag
+
+(Note that asciidoc-dblatex is required from debian 9 on and did not exist before.)
 
 Build PDFs, run:
   make
