OsmoMSC: add rate counter documentation
Change-Id: Idc105fd16511c6ea4f5069a57b217ea3319bdbec

--- a/OsmoMSC/osmomsc-usermanual.adoc
+++ b/OsmoMSC/osmomsc-usermanual.adoc
@@ -14,6 +14,8 @@ include::chapters/running.adoc[]
 
 include::chapters/control.adoc[]
 
+include::chapters/counters.adoc[]
+
 include::../common/chapters/vty.adoc[]
 
 include::../common/chapters/logging.adoc[]
