OsmoSGSN: add rate counter documentation
Change-Id: I4c5d5744f961a92bc7c8888ca739d1e8a8a0be9c

--- a/OsmoSGSN/osmosgsn-usermanual.adoc
+++ b/OsmoSGSN/osmosgsn-usermanual.adoc
@@ -27,6 +27,8 @@ include::../common/chapters/oap.adoc[]
 
 include::chapters/gsup.adoc[]
 
+include::chapters/counters.adoc[]
+
 include::../common/chapters/port_numbers.adoc[]
 
 include::../common/chapters/bibliography.adoc[]
