share chapters/gsup.adoc from OsmoSGSN to OsmoMSC + OsmoHLR
Since the NITB split, GSUP is used in all three network elements, so
make the protocol a shared chapter

Change-Id: Id2d7c27ef16eb0ebe5f60d625a1fcf42f1603f4f

--- a/OsmoSGSN/osmosgsn-usermanual.adoc
+++ b/OsmoSGSN/osmosgsn-usermanual.adoc
@@ -25,7 +25,7 @@ include::../common/chapters/control_if.adoc[]
 
 include::../common/chapters/oap.adoc[]
 
-include::chapters/gsup.adoc[]
+include::../common/chapters/gsup.adoc[]
 
 include::chapters/counters.adoc[]
 
