--- a/OsmoMSC/osmomsc-usermanual.adoc
+++ b/OsmoMSC/osmomsc-usermanual.adoc
@@ -28,6 +28,8 @@ include::../common/chapters/mncc.adoc[]
 
 include::../common/chapters/control_if.adoc[]
 
+include::../common/chapters/gsup.adoc[]
+
 include::../common/chapters/port_numbers.adoc[]
 
 include::../common/chapters/bibliography.adoc[]
