Introduce chapter trx_if.adoc and add it to OsmoTRX and OsmoBTS
This chapter defines the protocol used between osmo-trx and
osmo-bts-trx.

Most of the text comes originally from osmo-trx.git/README, as it's the
only known documentation of the protocol other than the code itself.

Change-Id: I56c418eef0f826ae1aadbed5b151fbed241c7885

--- a/OsmoBTS/osmobts-usermanual.adoc
+++ b/OsmoBTS/osmobts-usermanual.adoc
@@ -26,6 +26,8 @@ include::chapters/bts-models.adoc[]
 
 include::chapters/architecture.adoc[]
 
+include::../common/chapters/trx_if.adoc[]
+
 include::../common/chapters/control_if.adoc[]
 
 include::../common/chapters/port_numbers.adoc[]
@@ -35,4 +37,3 @@ include::../common/chapters/bibliography.adoc[]
 include::../common/chapters/glossary.adoc[]
 
 include::../common/chapters/gfdl.adoc[]
-
