osmotrx: Split Device specific section from backend one
Device specific sections will be added to this new chapter.

Change-Id: Id96cbf857e2ef92d9ad2cb58fd18132f981447d7

--- a/OsmoTRX/osmotrx-usermanual.adoc
+++ b/OsmoTRX/osmotrx-usermanual.adoc
@@ -25,6 +25,8 @@ include::chapters/configuration.adoc[]
 
 include::chapters/trx-architectures.adoc[]
 
+include::chapters/trx-devices.adoc[]
+
 include::chapters/trx-backends.adoc[]
 
 include::../common/chapters/trx_if.adoc[]
