--- a/OsmoTRX/osmotrx-usermanual.adoc
+++ b/OsmoTRX/osmotrx-usermanual.adoc
@@ -29,6 +29,8 @@ include::chapters/trx-devices.adoc[]
 
 include::chapters/trx-backends.adoc[]
 
+include::chapters/code-architecture.adoc[]
+
 include::../common/chapters/trx_if.adoc[]
 
 include::../common/chapters/port_numbers.adoc[]
